--- a/content/post/2023-11-03-odds-are-you-re-using-probabilities-to-describe-event-outcomes/index.Rmd
+++ b/content/post/2023-11-03-odds-are-you-re-using-probabilities-to-describe-event-outcomes/index.Rmd
@@ -5,6 +5,7 @@ date: '2023-11-03'
 slug: odds-are-you-re-using-probabilities-to-describe-event-outcomes
 categories:
   - data science
+  - rstats
 tags: ["`r funspotr::spot_tags(drop_knitr = TRUE)`"]
 thumbnail: /2023/11/03/odds-are-you-re-using-probabilities-to-describe-event-outcomes/images/may-the-odds-be-ever-in-your-favor.jpg
 ---
